Fix issues where margins pushed elements out of bounds.

--- a/src/renderer/styles.scss
+++ b/src/renderer/styles.scss
@@ -9,3 +9,7 @@
 @import 'styles/elements/popover';
 @import 'styles/elements/detail';
 @import 'styles/elements/form';
+
+* {
+  box-sizing: border-box;
+}
